# jiosavn-rust

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yaml
src/: main.rs
src/common/: constants.rs  helpers.rs  types.rs
src/modules/: albums.rs  artists.rs  mod.rs  playlists.rs  search.rs  songs.rs
src/pages/: home.rs  mod.rs
